Fix blockquote overflow on mobile

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -201,6 +201,7 @@
 		background: var(--color-quote-bg);
 		color: var(--color-quote-text);
 		border-left: 0.3rem solid var(--color-quote-border);
+		overflow-x: auto;
 	}
 	blockquote > :first-child {
 		margin-top: 0;
